[package]
name = "test_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
ccase = "0.4.1"
chrono = "0.4.23"
diesel = { version = "2.0.0", features = ["sqlite", "postgres", "chrono"] }
dotenvy = "0.15"
kv-derive = "1.0.1"
proc-macro-error = "1.0.4"

[models]
proc-macro = true
