[package]
name = "test_rust"
version = "0.1.0"
edition = "2021"
default-run = "my-binary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
ccase = "0.4.1"
chrono = "0.4.23"
diesel = { version = "2.0.0", default-feature = false, features = ["sqlite", "postgres", "chrono"] }
dotenvy = "0.15"
kv-derive = "1.0.1"
proc-macro-error = "1.0.4"
rocket = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_contrib = { version = "0.4.10", features = ["json"] }

[models]
proc-macro = true

[[bin]]
name = "my-binary"
path = "src/main.rs"
# [lib]
# name = "test_rust"
# path = "src/main.rs"
# crate-type = ["bin"]