[package]
name = "test_rust"
version = "0.1.0"
edition = "2021"
default-run = "my-binary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
ccase = "0.4.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0", features = ["sqlite","chrono"] }
smartcore = {version = "0.3.0", features=["serde"]}
dotenvy = "0.15"
kv-derive = "1.0.1"
proc-macro-error = "1.0.4"
rocket = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.151"
serde_json = "1.0"
rocket_contrib = { version = "0.4.10", features = ["json"] }
cargo-watch = "8.3.0"
rustc-serialize = "0.3.24"

[[bin]]
name = "my-binary"
path = "src/main.rs"
